data/all_generated_tests/raw_wast_tests/call_IncorrectBranchTargetResolution_3185.wast
;; 4. **Test with Labels and Loop Constructs**:    - **Description**: Place a `call` within a loop, using labels to repeat sections of code.    - **Constraint**: Ensures that the `call` correctly follows the loop and label instructions.    - **Relation to Incorrect Branch Target Resolution**: Incorrect label resolution could cause the `call` to execute too early or miss iterations of the loop.

(assert_invalid
  (module
    (func $test (result i32)
      (i32.const 5)
      (loop $loop
        (block $lbl
          (br_if $lbl (i32.eq (i32.const 0) (call 1 (i32.const 1))))
          (br $loop)
        )
      )
    )
    (func (param i32) (result i32) (i32.const 1))
  )
  "type mismatch"
)